--- a/sirenappengine/stylesheets/style.css
+++ b/sirenappengine/stylesheets/style.css
@@ -118,9 +118,21 @@ blockquote {
 	margin-right: auto;
 	margin-top: 0;
 	background-color: #c3d9ff;
-	-moz-border-radius: 10px 10px 0 0;
+	-moz-border-radius: 10px 10px 10px 10px;
+	-webkit-border-bottom-left-radius: 10px 10px; 
+	-webkit-border-bottom-right-radius: 10px 10px;
 	-webkit-border-top-left-radius: 10px 10px; 
 	-webkit-border-top-right-radius: 10px 10px;
+}
+
+#bottom {
+	text-align: center;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	margin-bottom: 15px;
+	font-size: 11px;
+	color: #fff;
+	height: 35px;
 }
 
 .post-title {
