--- a/sirenappengine/jieblog/templates/bottom.html
+++ b/sirenappengine/jieblog/templates/bottom.html
@@ -1,3 +1,3 @@
 <div id="bottom">
-	<div>Copyright © 2008 JIEblog Powered by Google Appengine | Designed by lucidanui</div>
+	<h4>Copyright © 2008 JIEblog Powered by Google Appengine | Designed by lucidanui</h4>
 </div>
