--- a/sirenappengine/stylesheets/style.css
+++ b/sirenappengine/stylesheets/style.css
@@ -131,6 +131,7 @@ blockquote {
 	font-size: 11px;
 	color: #fff;
 	height: 35px;
+	clear: both;
 }
 
 .post-title {
@@ -230,6 +231,7 @@ a:visited {
 	text-align: center;	
 	width: 260px;
 	float: right;	
+	display: block;
 	font-family: 'Trebuchet MS',Tahoma,Verdana,'Microsoft YaHei';        
 }
 
