--- a/sirenappengine/jieblog/templates/header.html
+++ b/sirenappengine/jieblog/templates/header.html
@@ -15,6 +15,6 @@
 	<div id="header-title">
 		<div id="blog-title">
 			<a href="/">JIEblog</a></div>
-		<div id='text_quo'>{{text_quo}}</div>
+		<div id='text_quo'>一份Geek的程序备忘录</div>
 	</div>
 </div>
