--- a/sirenappengine/stylesheets/prettify.css
+++ b/sirenappengine/stylesheets/prettify.css
@@ -10,7 +10,12 @@
 .atv{color:#080}
 .dec{color:#606}
 
-pre.prettyprint{padding:2px;border-left:3px solid #7755aa;padding-left: 5px}
+pre.prettyprint{ 
+					padding:2px;
+					border-left:3px solid #7755aa;
+					padding-left: 5px
+					margin: 10px;
+				}
 @media print{
 .str{color:#060}
 .kwd{color:#006;font-weight:bold}
