Add sider_bar.html,fixed some layouts

--- a/sirenappengine/jieblog/templates/base.html
+++ b/sirenappengine/jieblog/templates/base.html
@@ -7,7 +7,7 @@
 		<link rel="alternate" type="application/rss+xml" title="JIEblog - RSS" href="http://jieblog.appspot.com/feeds/" />
 		<link href="/stylesheets/prettify.css" type="text/css" rel="stylesheet" />
 		<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="/stylesheets/wlwmanifest.xml" />
-
+<meta name="verify-v1" content="6T63XJXBvR/QyaJ91mnrVDd9aLNqPm/Cftg49vLR1KU=" />
 		<script type="text/javascript" src="/scripts/prettify.js"></script>
 		<script type="text/javascript" src="/scripts/audio-player.js"></script>
 		<script type="text/javascript" src="/scripts/play_config.js"></script>
