--- a/sirenappengine/jieblog/templates/featurelink.html
+++ b/sirenappengine/jieblog/templates/featurelink.html
@@ -1,5 +1,5 @@
 <div id="feature-list-all">
-	<div class="widget-title4">Feature List</div>
+	<div class="widget-title" id="widget-feature-list">Feature List</div>
 	<div class="widget-content">
 	{% for link in featurelink %}
 		<div class="feature-list">
