--- a/sirenappengine/jieblog/templates/sitelink.html
+++ b/sirenappengine/jieblog/templates/sitelink.html
@@ -1,5 +1,5 @@
 <div id="site-link">
-	<div class="widget-title">Site Link</div>
+	<div class="widget-title" id="widget-site-link">Site Link</div>
 	<div class="widget-content">
 	<ul>
 		{% for link in sitelink %}
