--- a/sirenappengine/jieblog/templates/comment-form.html
+++ b/sirenappengine/jieblog/templates/comment-form.html
@@ -1,5 +1,5 @@
 ﻿		<div id="comments-form">
-			<div class="widget-title">Comment</div>
+			<div class="widget-title" id="widget-comment-form">Comment</div>
 				<form action="." method="post">
 					{{commentform.as_ul}}
 					<input type="submit" name="commentpost" value="发表评论" />
