--- a/sirenappengine/jieblog/templates/index.html
+++ b/sirenappengine/jieblog/templates/index.html
@@ -2,10 +2,7 @@
 
 {% block contents %}
 			{% include 'header.html' %}
-			
-			{% include 'right_bar.html' %}
-			{% include 'right_bar2.html' %}
-
+			{% include 'sider_bar.html'%}
 			{% for post in posts %}
 				{% include 'post.html' %}	
 			{% endfor %}
