--- a/sirenappengine/jieblog/templates/tag_cloud.html
+++ b/sirenappengine/jieblog/templates/tag_cloud.html
@@ -1,5 +1,5 @@
 <div id="tags_cloud">
-	<div class="widget-title3">Tags Cloud</div>
+	<div class="widget-title" id="widget-tags-cloud">Tags Cloud</div>
 	<div class="widget-content">
 	{% for tag in tag_cloud %}
 		<span class="tag-link"><a href="../../tag/{{tag}}">{{tag.name}}</a></span>
