--- a/sirenappengine/jieblog/templates/post-tags.html
+++ b/sirenappengine/jieblog/templates/post-tags.html
@@ -1,1 +1,1 @@
-<span class="tag-link"><a href="../../tag/{{tag}}" title="{{tag}}">{{tag}}</a></span>
+<span class="post-tags-main"><a href="../../tag/{{tag}}" title="{{tag}}">{{tag}}</a></span>
