--- a/sirenappengine/jieblog/templates/powerby.html
+++ b/sirenappengine/jieblog/templates/powerby.html
@@ -1,6 +1,6 @@
-<div id="power-by">
+<div class="widget">
 	<div class="widget-title" id="widget-power-by">Power By</div>
-	<div class="widget-content">
+	<div class="widget-content" id="power-by">
 		<div id="gae-icon">
 			<img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" alt="Powered by Google App Engine" />
 		</div>
