--- a/sirenappengine/jieblog/templates/sitelink.html
+++ b/sirenappengine/jieblog/templates/sitelink.html
@@ -1,6 +1,6 @@
-<div id="site-link">
+<div class="widget">
 	<div class="widget-title" id="widget-site-link">Site Link</div>
-	<div class="widget-content">
+	<div class="widget-content" id="site-link">
 	<ul>
 		{% for link in sitelink %}
 		<li><a href='{{link.link}}'>{{link.title}}</a></li>
