--- a/sirenappengine/jieblog/templates/tag_cloud.html
+++ b/sirenappengine/jieblog/templates/tag_cloud.html
@@ -1,6 +1,6 @@
-<div id="tags_cloud">
+<div class="widget">
 	<div class="widget-title" id="widget-tags-cloud">Tags Cloud</div>
-	<div class="widget-content">
+	<div class="widget-content" id="tags-cloud">
 	{% for tag in tag_cloud %}
 		<span class="tag-link"><a href="../../tag/{{tag}}">{{tag.name}}</a></span>
 	{% endfor %}
