--- a/sirenappengine/jieblog/templates/right_top.html
+++ b/sirenappengine/jieblog/templates/right_top.html
@@ -1,6 +1,2 @@
-<div id="right-top">
-	<div class="widget-title" id="widget-right-top">Quotations</div>
-	<div class="widget-content">
-		Fight with your head,think with your heart
-	</div>
-</div>
+
+{% include 'recent_com.html' %}
