--- a/sirenappengine/jieblog/templates/right_top.html
+++ b/sirenappengine/jieblog/templates/right_top.html
@@ -1,2 +1,68 @@
+<div class="widget-w">
 
-{% include 'recent_com.html' %}
+{% if friendsconnect %}
+	<!-- Include the Google Friend Connect javascript library. -->
+	<script type="text/javascript" src="http://www.google.com/friendconnect/script/friendconnect.js"></script>
+	
+	<!-- Define the div tag where the gadget will be inserted. -->
+	<div id="div-1228696487833" style="width:335px;border:1px solid #cccccc;"></div>
+	<!-- Render the gadget into a div. -->
+	<script type="text/javascript">
+	var skin = {};
+	skin['HEIGHT'] = '230';
+	skin['BORDER_COLOR'] = '#cccccc';
+	skin['ENDCAP_BG_COLOR'] = '#e0ecff';
+	skin['ENDCAP_TEXT_COLOR'] = '#333333';
+	skin['ENDCAP_LINK_COLOR'] = '#0000cc';
+	skin['ALTERNATE_BG_COLOR'] = '#ffffff';
+	skin['CONTENT_BG_COLOR'] = '#ffffff';
+	skin['CONTENT_LINK_COLOR'] = '#0000cc';
+	skin['CONTENT_TEXT_COLOR'] = '#333333';
+	skin['CONTENT_SECONDARY_LINK_COLOR'] = '#7777cc';
+	skin['CONTENT_SECONDARY_TEXT_COLOR'] = '#666666';
+	skin['CONTENT_HEADLINE_COLOR'] = '#333333';
+	google.friendconnect.container.setParentUrl('/' /* location of rpc_relay.html and canvas.html */);
+	google.friendconnect.container.renderMembersGadget(
+	 { id: 'div-1228696487833',
+	   site: '14084712429381725335'},
+	  skin);
+	</script>
+{% else %}
+
+	<!-- Include the Google Friend Connect javascript library. -->
+	<script type="text/javascript" src="http://www.google.com/friendconnect/script/friendconnect.js"></script>
+	
+	<!-- Define the div tag where the gadget will be inserted. -->
+	<div id="div-1228697739865" style="width:335px;border:1px solid #cccccc;"></div>
+	<!-- Render the gadget into a div. -->
+	<script type="text/javascript">
+	var skin = {};
+	skin['BORDER_COLOR'] = '#cccccc';
+	skin['ENDCAP_BG_COLOR'] = '#e0ecff';
+	skin['ENDCAP_TEXT_COLOR'] = '#333333';
+	skin['ENDCAP_LINK_COLOR'] = '#0000cc';
+	skin['ALTERNATE_BG_COLOR'] = '#ffffff';
+	skin['CONTENT_BG_COLOR'] = '#ffffff';
+	skin['CONTENT_LINK_COLOR'] = '#0000cc';
+	skin['CONTENT_TEXT_COLOR'] = '#333333';
+	skin['CONTENT_SECONDARY_LINK_COLOR'] = '#7777cc';
+	skin['CONTENT_SECONDARY_TEXT_COLOR'] = '#666666';
+	skin['CONTENT_HEADLINE_COLOR'] = '#333333';
+	skin['DEFAULT_COMMENT_TEXT'] = '- add your comment here -';
+	skin['HEADER_TEXT'] = '\u8bc4\u8bba';
+	skin['POSTS_PER_PAGE'] = '6';
+	google.friendconnect.container.setParentUrl('/' /* location of rpc_relay.html and canvas.html */);
+	google.friendconnect.container.renderWallGadget(
+	 { id: 'div-1228697739865',
+	   site: '14084712429381725335',
+	   'view-params':{"scope":"PAGE","allowAnonymousPost":"true","features":"video,comment"}
+	},
+	  skin);
+	</script>
+
+{% endif %}
+
+</div>
+
+<!--{% include 'recent_com.html' %} -->
+
