Fix theme and put in new branch:zhou

--- a/sirenappengine/jieblog/templates/comment-form.html
+++ b/sirenappengine/jieblog/templates/comment-form.html
@@ -2,6 +2,6 @@
 			<div class="widget-title" id="widget-comment-form">Comment</div>
 				<form action="." method="post">
 					{{commentform.as_ul}}
-					<input type="submit" name="commentpost" value="发表评论" />
+					<input type="submit" name="commentpost" value="Submit" />
 				</form>
 		</div>
