--- a/sirenappengine/jieblog/templates/comment.html
+++ b/sirenappengine/jieblog/templates/comment.html
@@ -9,7 +9,7 @@
 	
 		<div id="comments-comment">
 			<div id="comments">
-					<div id="widget-comment">Comment</div>
+					<div id="widget-comment"></div>
 					{% for comment in comments %}
 						{% include 'comm.html' %}
 					{% endfor %}
