--- a/sirenappengine/stylesheets/style.css
+++ b/sirenappengine/stylesheets/style.css
@@ -33,10 +33,11 @@ blockquote {
 
 
 #text_quo {
-	font-size: 11px;
+	font-size: 9px;
 	margin-top: 0px;
 	color: #999;
 	font-style: italic;
+	font-family: Courier New, Georgia, Tahoma;
 }
 
 #header {
