add memcache and fix tag view

--- a/sirenappengine/jieblog/templates/tag.html
+++ b/sirenappengine/jieblog/templates/tag.html
@@ -4,7 +4,7 @@
 
 	{% include 'header.html' %}
 	
-	{% include 'right_bar.html' %}
+	{% include 'sider_bar.html'%}
 	
 	{% for post in tag_posts %}
 		{% include 'post.html' %}
